fixed line seperator and overflow issues

--- a/css/style.css
+++ b/css/style.css
@@ -839,9 +839,9 @@ button:focus {
     transition-duration: 0.2s;
     transition-timing-function: ease-in-out;
     box-shadow: 0px 4px 4px rgb(0, 0, 0, 0.25);
-    top: calc(100% - 10px);
+    top: calc(100% - 5px);
     left: auto;
-    right: 32px;
+    right: 15px;
     background-color: white;
     border-radius: 8px;
     opacity: 0;
@@ -886,6 +886,7 @@ button:focus {
     top: 56px;
     left: 0;
     overflow-x: hidden;
+    overflow-y: hidden;
     box-shadow: 4px 0 4px -4px rgba(0, 0, 0, 0.25);
 }
 
@@ -1071,7 +1072,7 @@ button:focus {
 .task-options .time-input-seperator {
     text-align: center;
     width: 5px;
-    line-height: 2px;
+    line-height: 23px;
     font-size: 15px;
 }
 
